// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-avatar-focusable #render component type (1) with valid markup 1`] = `
<gux-avatar-focusable-beta>
  <template shadowrootmode="open">
    <slot></slot>
  </template>
  <button>
    <gux-avatar-beta name="Conor Darcy"></gux-avatar-beta>
  </button>
</gux-avatar-focusable-beta>
`;

exports[`gux-avatar-focusable #render component type (2) with valid markup 1`] = `
<gux-avatar-focusable-beta>
  <template shadowrootmode="open">
    <slot></slot>
  </template>
  <a href="#">
    <gux-avatar-beta name="Conor Darcy"></gux-avatar-beta>
  </a>
</gux-avatar-focusable-beta>
`;

exports[`gux-avatar-focusable #render component type (3) with valid markup 1`] = `
<gux-avatar-focusable-beta>
  <template shadowrootmode="open">
    <slot></slot>
  </template>
  <gux-avatar-change-photo-beta>
    <gux-avatar-beta name="Conor Darcy" slot="avatar"></gux-avatar-beta>
  </gux-avatar-change-photo-beta>
</gux-avatar-focusable-beta>
`;
